<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:padding="5dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_event_title"
            android:textSize="9pt"
            android:textAlignment="center">
        </TextView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <TextView android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:labelFor="@+id/SpinnerEventType"
            android:text="@string/discipline"/>
        <Spinner
            android:id="@+id/SpinnerEventType"
            android:layout_height="wrap_content"
            android:prompt="@string/event_type1"
            android:layout_width="fill_parent"
            android:entries="@array/event_type_list">
        </Spinner>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:labelFor="@+id/EditTextNbOfPeople"
            android:text="@string/nb_of_people"/>
        <EditText
            android:id="@+id/EditTextNbOfPeople"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/fill_in_the_field"
            android:layout_width="fill_parent">
        </EditText>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:labelFor="@+id/EditTextLocation"
            android:text="@string/location"/>
        <EditText
            android:id="@+id/EditTextLocation"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/fill_in_the_field"
            android:layout_width="fill_parent">
        </EditText>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:labelFor="@+id/EditTextDateTime"
            android:text="@string/date_time"/>
        <EditText
            android:id="@+id/EditTextDateTime"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint="@string/fill_in_the_field"
            android:focusableInTouchMode="false"
            android:layout_width="fill_parent">
        </EditText>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:labelFor="@+id/EditTextDesc"
            android:text="@string/description"/>
        <EditText
            android:id="@+id/EditTextDesc"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="2"
            android:layout_width="fill_parent">
        </EditText>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_upload"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/add" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="65dp" />

    </LinearLayout>
</ScrollView>